--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,8 @@ build:
 outputs:
   - name: glad2
     build:
+      noarch: python
+      skip: true  # [not linux64]
       script: python -m pip install . --no-deps --no-build-isolation -vv
       entry_points:
         - glad = glad.__main__:main
