--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,8 +36,9 @@ outputs:
         - pip check
 
   - name: glad2-cmake
-    script: install_cmake.sh  # [unix]
-    script: install_cmake.bat  # [win]
+    script:
+      - ${RECIPE_DIR}/install_cmake.sh  # [not win]
+      - "%RECIPE_DIR%\\install_cmake.bat"  # [win]
     build:
       skip: false
     requirements:
