--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,8 +36,8 @@ outputs:
         - pip check
 
   - name: glad2-cmake
-    script: ${RECIPE_DIR}/install_cmake.sh     # [not win]
-    script: "%RECIPE_DIR%\\install_cmake.bat"  # [win]
+    script: install_cmake.sh   # [not win]
+    script: install_cmake.bat  # [win]
     build:
       skip: false
     requirements:
